--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --env=jsdom --watch ",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "next": "12.3.0",
@@ -14,11 +16,19 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.0.0",
     "@types/node": "18.7.16",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
+    "babel-jest": "^29.0.2",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
+    "jest": "^29.0.2",
+    "jest-environment-jsdom": "^29.0.2",
+    "next-router-mock": "^0.7.4",
     "typescript": "4.8.3"
   }
 }
